src/main/resources/k8s/helm/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: myapp-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: myapp-tls       # dein Secret mit Zertifikat & Key
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: Same
