src/main/resources/k8s/helm/envoy/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp-route
  namespace: myapp
spec:
  parentRefs:
    - name: myapp-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "myapp.localtest.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello
      backendRefs:
        - name: myapp
          port: 80
